ep2and3/grammar.txt
expr            : KEYWORD:PUSH IDENTIFIER ARROW expr
                : comp-expr ((KEYWORD:&|KEYWORD:or) comp-expr)* 

comp-expr       : : comp-expr
                : arith-expr ((EE|LT|GT|LTE|GTE) arith-expr)*

arith-expr      : term ((PLUS|MINUS) term)*

term            : factor ((MUL|DIV) factor)*

factor          : (PLUS|MINUS) factor

power           : atom (POW factor)*

atom            : INT|FLOAT
                : LPAREN expr RPAREN

if-expr         : KEYWORD:if expr KEYWORD:do expr
                    (KEYWORD:elif expr KEYWORD:do expr)*
                    (KEYWORD:else expr)?

for-expr        : KEYWORD:for IDENTIFIER ARROW expr KEYWORD:until expr
                    (KEYWORD:inc expr)? KEYWORD:do expr

while-expr      : KEYWORD:while expr KEYWORD:do expr
